--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">BelajarHorizontalScrollView</string>
+    <string name="app_name">Belajar ScrollView</string>
+    <string name="teks">CONTOH TEKS</string>
+    <string name="judul">Horizontal Scroll View </string>
+
 </resources>
